syntax = "proto2";


message Scalar2Message {
    optional double f_double = 1;
    optional float f_float = 2;
    optional int32 f_int32 = 3;
    optional int64 f_int64 = 4;
    optional uint32 f_uint32 = 5;
    optional uint64 f_uint64 = 6;
    optional sint32 f_sint32 = 7;
    optional sint64 f_sint64 = 8;
    optional fixed32 f_fixed32 = 9;
    optional fixed64 f_fixed64 = 10;
    optional sfixed32 f_sfixed32 = 11;
    optional sfixed64 f_sfixed64 = 12;
    optional bool f_bool = 13;
    optional string f_string = 14;
    optional bytes f_bytes = 15;
}
